--- a/Nov2015/execSummary_njb.tex
+++ b/Nov2015/execSummary_njb.tex
@@ -35,6 +35,7 @@ In this paper, we first present results from a detailed, quantitative survey-bas
 \input{relwork.tex}
 \input{summary.tex}
 \input{additionalAuth.tex}
+\input{ack.tex}
 
 \bibliographystyle{plain}
 \bibliography{hao,refs}
