--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -5,11 +5,11 @@ In this section, we discuss the results from our quantitative survey. We extende
 
 \begin{figure}[ht!]
 \begin{center}
-\frame{\includegraphics[scale=0.6]{figs/loadgraphUS.pdf}}
+\frame{\includegraphics[scale=0.58]{figs/loadgraphUS.pdf}}
 \caption{Total Load at at SCs in United States}
 \label{fig:USload}
 \vspace{0.9cm}
-\frame{\includegraphics[scale=0.6]{figs/loadgraphEU.pdf}}
+\frame{\includegraphics[scale=0.58]{figs/loadgraphEU.pdf}}
 \caption{Total Load at at SCs in Europe}
 \label{fig:EUload}
 \end{center}
@@ -19,11 +19,11 @@ Figures \ref{fig:USload} and \ref{fig:EUload} depict the total load in megawatts
 
 \begin{figure}[ht!]
 \begin{center}
-\frame{\includegraphics[scale=0.6]{figs/vargraphUS.pdf}}
+\frame{\includegraphics[scale=0.58]{figs/vargraphUS.pdf}}
 \caption{Maximum Variability at at SCs in United States}
 \label{fig:USvar}
 \vspace{0.9cm}
-\frame{\includegraphics[scale=0.6]{figs/vargraphEU.pdf}}
+\frame{\includegraphics[scale=0.58]{figs/vargraphEU.pdf}}
 \caption{Maximum Variability at at SCs in Europe}
 \label{fig:EUvar}
 \end{center}
@@ -37,7 +37,7 @@ From our questionnaire, we also concluded that neither European nor the United S
 
 \input{Table2.jpg.tex}
 
-We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this table, the main motivators are the financial incentives and the desire to be ``good citizens.''
+We also asked our European respondents to indicate what might motivate them to communicate with their ESPs. The results are shown in Table \ref{fig:table2}. As can be noted from this table, the main motivators are the financial incentives and the desire to be ``good citizens.'' Thus, SC motivations are driven by market-based mechanisms that justify economics and social-responsibility, even under the absence of regulatory support.
 
 \input{Table3.jpg.tex}
 We noted that none of the European SCs communicated about grid integration potential, demand management and available flexibility with their associated ESPs. Additionally, there was little interest in a tighter integration with the ESPs. In general, the SCs in the United States seem to have a closer relationship with their ESPs than the ones in Europe. This can also be verified from Table \ref{fig:table3}, which shows that only 1 of the 9 respondents in Europe have had a discussion with their ESP. 
