--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -1,6 +1,6 @@
 \section{Motivation for Demand Management}
 \label{strategies}
-We measured the power consumption of Sequoia, the world's third fastest supercomputer at 17.1 petaflops, hosted at LLNL. Sequoia is a BlueGene/Q design-based system with 98,304 16-core PowerPC A2 compute nodes that has a power rating of 7.9 MW. The data from Sequoia was collected at three-minute intervals over three days and the results can be seen from Figure \ref{fig:seq}. Information about the workload being executed was not made available. The y-axis is the power consumed, and the x-axis represents the time samples.  As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled or forecasted. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. \\
+We measured the power consumption of Sequoia, the world's third fastest supercomputer at 17.1 petaflops, hosted at LLNL. Sequoia is a BlueGene/Q design-based system with 98,304 16-core PowerPC A2 compute nodes that has a power rating of 7.9 MW. The data from Sequoia was collected at three-minute intervals over three days and the results can be seen from Figure \ref{fig:seq}. Information about the workload being executed was not made available. The y-axis is the power consumed, and the x-axis represents the time samples.  As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled or forecasted. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. 
 
 \begin{figure}
 \begin{center}
@@ -12,7 +12,7 @@ We measured the power consumption of Sequoia, the world's third fastest supercom
 
 \begin{figure}
 \begin{center}
-\frame{\includegraphics[scale=0.6]{figs/ORNLData.pdf}}
+\frame{\includegraphics[scale=0.55]{figs/ORNLData.pdf}}
 \caption{Titan Supercomputer Power Swings}
 \label{fig:titan}
 \end{center}
