--- a/Nov2015/appendix.tex
+++ b/Nov2015/appendix.tex
@@ -2,7 +2,7 @@
 \section{Appendix}
 \label{appendixA}
 
-The details of our questionnaire are presented below. Our questions focused on the HPC load, power variability and demand management approaches. 
+The details of our questionnaire are presented below. 
 
 \begin{enumerate}
 \item{What is your total facility energy? This should be the same as the total facility energy number that is used for calculating PUE.}
