--- a/Nov2015/hao.bib
+++ b/Nov2015/hao.bib
@@ -83,7 +83,7 @@ pages={1-10},
 @inproceedings{ghamkhari2012data,
   title={Data centers to offer ancillary services},
   author={Ghamkhari, M. and Mohsenian-Rad, H.},
-  booktitle={Smart Grid Communications (SmartGridComm), 3rd International Conference on},
+  booktitle={Smart Grid Communications, 3rd International Conference on},
   pages={436--441},
   year={2012},
   organization={IEEE}
@@ -196,5 +196,12 @@ year={2013},
   pages={1--10},
   year={2014},
   organization={IEEE}
+}
+
+@article{DC4Cities,
+author={European Union},
+journal={\url{http://www.dc4cities.eu/en/}},
+title={DC4Cities},
+year=2015
 }
  
