--- a/Nov2015/additionalAuth.tex
+++ b/Nov2015/additionalAuth.tex
@@ -3,4 +3,5 @@ Torsten Wilde, Leibniz Supercomputing Center\\
 James H. Rogers, Oak Ridge National Laboratory\\
 Ayse Coskun, Boston University\\
 Hao Chen, Boston University\\
-Peter M. Schwartz, Lawrence Berkeley National Laboratory
+Peter M. Schwartz, Lawrence Berkeley National Laboratory\\
+Gert Svensson, KTH Royal Institute of Technology
