--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -18,7 +18,7 @@ We measured the power consumption of Sequoia, the world's third fastest supercom
 \end{center}
 \end{figure}
 
-We observe similar trends with data from Titan, which is the world's second-fastest supercomputer hosted at ORNL. Titan is a 17.6 petaflop system with a power rating of 8.2 MW. It comprises of 18,688 16-core AMD Opteron 6274 compute nodes, and each compute node has a NVIDIA Tesla K20X GPU. Figure \ref{fig:titan} shows data gathered from a identical WL-LSMS executions on the Titan supercomputer. WL-LSMS is a benchmark that performs thermodynamic calculations  \cite{WLLSMS}. The graph in Figure \ref{fig:titan} has instantaneous power in MW on the y-axis and the benchmark execution time on the x-axis. The data is reported for a CPU-only run as well as a GPU-enabled run. The power samples for the CPU-only run were collected every 8 minutes, where as the samples for the GPU-enabled run were reported every second. The red line represents the GPU-enabled run and the blue line represents the CPU-only run.  As can be noted from this data, substantial power swings are observed on Titan, both in the case of CPU-only as well as GPU-enabled runs. 
+We observe similar trends with data from Titan, which is the world's second-fastest supercomputer hosted at ORNL. Titan is a 17.6 petaflop system with a power rating of 8.2 MW. It comprises of 18,688 16-core AMD Opteron 6274 compute nodes, and each compute node has a NVIDIA Tesla K20X GPU. Figure \ref{fig:titan} shows data gathered from identical WL-LSMS executions on the Titan supercomputer. WL-LSMS is a benchmark that performs thermodynamic calculations  \cite{WLLSMS}. The graph in Figure \ref{fig:titan} has instantaneous power in MW on the y-axis and the benchmark execution time on the x-axis. The data is reported for a CPU-only run as well as a GPU-enabled run. The power samples for the CPU-only run were collected every 8 minutes, where as the samples for the GPU-enabled run were reported every second. The red line represents the GPU-enabled run and the blue line represents the CPU-only run.  As can be noted from this data, substantial power swings are observed on Titan, both in the case of CPU-only as well as GPU-enabled runs. 
 
 The energy efficiency improves by about seven times when the GPU is enabled as the application runs significantly faster. Note that the power swings observed here are a result of the ensemble runs of WL-LSMS. They occur when a new set of calculations is being initiated and there is a pause between the compute-intensive work phases. This trend is observed for both the GPU-enabled and the CPU-only runs. Also, the peak power and power fluctuations are only slightly different with the GPU-enabled run than they are with the CPU-only run. Peak power increased by about one megawatt with the GPU-enabled run. The net effect is that less energy is used to get the same work done in the GPU-enabled case, but with slightly higher power draw and potentially higher power variability.
 
