minor typos in related work have been addressed.

--- a/Nov2015/RelatedWork_HaoChen.tex
+++ b/Nov2015/RelatedWork_HaoChen.tex
@@ -1,6 +1,6 @@
-The focus of our study is the relationship between ESPs and SCs. SCs are fundamentally different than data centers as they have stricter QoS and performance guarantee requirements and need to maintain high levels of utilization. At present, little research exists in the domain for demand management for SCs.  Data centers are known to be capable of providing flexibility in their power consumption, and thus are great candidates to participate energy market demand response (DR) programs. Wierman et. al.~\cite{WiermanIGCC} survey the opportunities and challenges for data center DR participation. Aikema et. al.~\cite{aikema2012data} overview multiple types of ancillary service markets, and study the capacity and potential benefit by introducing a simple data center participation model. Siano et al. \cite{siano2014demand} present a survey of DR for smart grids. Ghatikar et. al.~\cite{ghatikar2012demand} exploit various load management techniques, such as load shedding and shifting for data center DR. Goiri et. al.~\cite{goiri2015matching} propose GreenSlot, a workload scheduler to maximize the green energy consumption (that is, solar energy) while meeting the job deadline. Geographic load migration is another broadly studied data center management technique to help balance the grid, and reduce the energy cost exploiting the electricity price differences~\cite{wangexploring,wang2013data,chiu2012electric,liu2011greening,lin2012online}.
+The focus of our study is the relationship between ESPs and SCs. SCs are fundamentally different than data centers as they have stricter QoS and performance guarantee requirements and need to maintain high levels of utilization. At present, little research exists in the domain for demand management for SCs.  Data centers are known to be capable of providing flexibility in their power consumption, and thus are great candidates to participate into energy market demand response (DR) programs. Wierman et. al.~\cite{WiermanIGCC} survey the opportunities and challenges for data center DR participation. Aikema et. al.~\cite{aikema2012data} overview multiple types of ancillary service markets, and study the capacity and potential benefit by introducing a simple data center participation model. Siano et al. \cite{siano2014demand} present a survey of DR for smart grids. Ghatikar et. al.~\cite{ghatikar2012demand} exploit various load management techniques, such as load shedding and shifting for data center DR. Goiri et. al.~\cite{goiri2015matching} propose GreenSlot, a workload scheduler to maximize the green energy consumption (that is, solar energy) while meeting the job deadline. Geographic load migration is another broadly studied data center management technique to help balance the grid, and reduce the energy cost exploiting the electricity price differences~\cite{wangexploring,wang2013data,chiu2012electric,liu2011greening,lin2012online}.
 
 The participation of data centers in traditional DR programs, such as real-time dynamic energy pricing~\cite{wang2013sequential,ghamkhari2012data,liu2014pricing} and peak shaving~\cite{urgaonkar2011optimal,PSUSigmetrics12,aksanli2013architecting}, has been widely studied. Recently, there are a growing number of interests on the data center participation in emerging DR programs that are more profitable. Chen et. al.~\cite{chenASPDAC} develop real-time dynamic control policies by leveraging both server level power management techniques and server state switches for data centers to provide regulation service reserves (RSRs). They also implement a prototype of the control policies on real-life server clusters with virtualized CPU resource limits~\cite{chendynamic}. Brocanelli et al.~\cite{brocanelli2013joint} propose the joint management of data center and employee Plug-in Hybrid Electric Vehicles (PHEVs) to increase the regulation profit. A systematic comparison shows that RSR is a more profitable program for data centers to participate than traditional programs such as peak shaving~\cite{chenIGCC}. Clausen et al. \cite{clausen2014load} found that smaller data centers aggregated through a Virtual Power Plant are a potential resource in demand management, but no electricity markets that aimed to facilitate this type of resource existed in Denmark. However, Energinet.dk and other Nordic transmission system operators do recognize demand response and demand-side market participation as a resource in grid management, and have set forth initiatives to reducing market barriers towards this type of capacity.  
 
-DC4Cities \cite{DC4Cities} is a visionary project funded by the European Union to develop new scenarios within a smart city context, considering renewable energy availability, and a data center's energy needs. Through the development energy management authorities (EMA) within smart cities, EMA admins can define energy goals for data centers. Workload managers at the level of each data center will then plan scheduling for applications according to energy goals and renewable
+DC4Cities \cite{DC4Cities} is a visionary project funded by the European Union to develop new scenarios within a smart city context, considering renewable energy availability, and a data center's energy needs. Through the development of energy management authorities (EMA) within smart cities, EMA admins can define energy goals for data centers. Workload managers at the level of each data center will then plan scheduling for applications according to energy goals and renewable
 energy availability, making data centers more energy adaptive.
