--- a/Nov2015/additionalAuth.tex
+++ b/Nov2015/additionalAuth.tex
@@ -4,4 +4,5 @@ James H. Rogers, Oak Ridge National Laboratory\\
 Ayse Coskun, Boston University\\
 Hao Chen, Boston University\\
 Peter M. Schwartz, Lawrence Berkeley National Laboratory\\
-Gert Svensson, KTH Royal Institute of Technology
+Gert Svensson, KTH Royal Institute of Technology\\
+Bo Norregaard Jorgensen, University of Southern Denmark
