--- a/Nov2015/strategies.tex
+++ b/Nov2015/strategies.tex
@@ -1,6 +1,6 @@
 \section{Motivation for Demand Management}
 \label{strategies}
-We measured the power consumption of Sequoia, the world's third fastest supercomputer at 17.1 petaflops, hosted at LLNL. Sequoia is a BlueGene/Q design-based system with 98,304 16-core PowerPC A2 compute nodes that has a power rating of 7.9 MW. The data from Sequoia was collected at three-minute intervals over three days and the results can be seen from Figure \ref{fig:seq}. Information about the workload being executed was not made available. The y-axis is the power consumed, and the x-axis represents the time samples.  As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled or forecasted. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. 
+We measured the power consumption of Sequoia, which is the world's third fastest supercomputer (17.1 petaflops) hosted at LLNL. Sequoia is a BlueGene/Q system with 98,304 16-core PowerPC A2 compute nodes and has a power rating of 7.9 MW. The data from Sequoia was collected at three-minute intervals over three days and the results can be seen from Figure \ref{fig:seq}. Information about the workload being executed was not made available. The y-axis is the power consumed, and the x-axis represents the time samples.  As can be noted from this figure, fluctuations of a few megawatts are fairly common. Some of these fluctuations may be related to maintenance cycles and could be scheduled or forecasted. However, there are other times where the fluctuations are not scheduled in advance and may occur as a result of the workload that is executing on the supercomputer. 
 
 \begin{figure}
 \begin{center}
@@ -20,7 +20,7 @@ We measured the power consumption of Sequoia, the world's third fastest supercom
 
 We observe similar trends with data from Titan, which is the world's second-fastest supercomputer hosted at ORNL. Titan is a 17.6 petaflop system with a power rating of 8.2 MW. It comprises of 18,688 16-core AMD Opteron 6274 compute nodes, and each compute node has a NVIDIA Tesla K20X GPU. Figure \ref{fig:titan} shows data gathered from identical WL-LSMS executions on the Titan supercomputer. WL-LSMS is a benchmark that performs thermodynamic calculations  \cite{WLLSMS}. The graph in Figure \ref{fig:titan} has instantaneous power in MW on the y-axis and the benchmark execution time on the x-axis. The data is reported for a CPU-only run as well as a GPU-enabled run. The power samples for the CPU-only run were collected every 8 minutes, where as the samples for the GPU-enabled run were reported every second. The red line represents the GPU-enabled run and the blue line represents the CPU-only run.  As can be noted from this data, substantial power swings are observed on Titan, both in the case of CPU-only as well as GPU-enabled runs. 
 
-The energy efficiency improves by about seven times when the GPU is enabled as the application runs significantly faster. Note that the power swings observed here are a result of the ensemble runs of WL-LSMS. They occur when a new set of calculations is being initiated and there is a pause between the compute-intensive work phases. This trend is observed for both the GPU-enabled and the CPU-only runs. Also, the peak power and power fluctuations are only slightly different with the GPU-enabled run than they are with the CPU-only run. Peak power increased by about one megawatt with the GPU-enabled run. The net effect is that less energy is used to get the same work done in the GPU-enabled case, but with slightly higher power draw and potentially higher power variability.
+The energy efficiency improves by about seven times when the GPU is enabled as the application runs significantly faster. Note that the improvement in energy efficiency is application-dependent, and that the power swings observed here are a result of the ensemble runs of WL-LSMS. In this example, they occur when a new set of calculations is being initiated and there is a pause between the compute-intensive work phases. This trend is observed for both the GPU-enabled and the CPU-only runs. Peak power increased by about one megawatt with the GPU-enabled run. The net effect is that less energy is used to get the same amount of work done in the GPU-enabled case, but with slightly higher power draw and potentially higher power variability.
 
 Both these datasets clearly indicate that power fluctuations occur in real production systems, and this can affect the reliability of the ESP grid. It is thus imperative to understand how such variable power demands can be managed better. In this context, demand management (DM) is one approach to mitigate the consequences of these power fluctuations that promotes a tighter relationship between ESPs and SCs. %SCs can forecast and communicate with their ESPs more often to discuss and address such issues. 
 
