integrated requested changes by Natalies. fixed some issues like "at at" in two figure captions.

--- a/Nov2015/intws.tex
+++ b/Nov2015/intws.tex
@@ -31,17 +31,15 @@ power grid, renewable energy, concession levy as well as taxes which are signifi
 The charges for power generation and distribution constitute only 25\% of
 the power price in Germany. As a result, the energy costs are very expensive for LRZ.
 
-LRZ operates in a 4 to 6 MW power band. Typically, they pay about
-17.8 Euro-cents per kWh. Having consistent power consumption is usually considered better,
-as huge power swings result in much higher electricity costs. It is thus imperative
-to be able to forecast any power swings and to inform the ESP about
+%\EUR{0.16}
+LRZ operates in a 4 to 6 MW power band. They have a contracted power price of 0.16\euro \ per kWh until 2018. A power grid usage fee is mainly determined by annual peak power consumption so large power swings result in much higher electricity cost. Power consumption measurements are averaged over 15 minute time intervals. The annual power consumption maximum is also the average peak power consumed within a 15 minutes time interval. It is thus imperative to be able to forecast any power swings and to inform the ESP about
 the same. Better prediction models for power usage will definitely benefit
 LRZ in terms of electricity costs, as one of their goals is to save on
 energy costs. This is primarily because their energy costs dominate their
 operational costs. Typically, LRZ lets the ESP know about 2 days in
 advance for any scheduled downtimes. At present, there are no major
 obligations toward or services provided to the ESP, mostly because of
-the QOS guarantees that have to be adhered to for their users.
+the QoS guarantees that have to be adhered to for their users.
 
 \subsection{Analysis}
 The key goals for our qualitative analysis were to understand the power purchase relationships, energy use, and the level of demand management flexibility available to reduce electricity use and/or energy costs for the three SCs under consideration. Our interviews thus focused on the annual electricity purchase negotiations and pricing structure, and on characterizing SC's electricity use relative to larger campus. We also tried to identify the level of motivation for demand management for lowering peak power and energy use and for any services being offered. We observed that while some trends were common across all three sites, there were some differences. We summarize these similarities and differences below. \\
@@ -52,4 +50,4 @@ An important common trend was that the power purchase negotiations were typicall
 {\bf Differences:}
 We observed that the pricing structure was different in all three cases. In case of LLNL, there was a flat rate, which makes LLNL less sensitive to electricity cost variation. For ORNL, there was a variable rate, which makes it somewhat sensitive to electricity costs. LRZ, however, is very sensitive to the pricing structure because of the expensive energy costs as well as the impact of power swings on electricity costs. In terms of power fluctuations, LLNL used demand forecasting to be a good citizen. For both LLNL and ORNL, reliability was not a major concern and power variations were acceptable by the ESP. For LRZ, the electricity cost increases if there were more power swings, making them highly responsive to such variability and enabling the need for better forecasting. The electricity generation mix in the United States was mostly thermal, where as in Europe it was largely renewable sources of energy. \\
 
-Overall, we believe that several factors drive the motivation for demand management. The key ones are the control that a site has when it comes to power purchase negotiations, their price sensitivity to power fluctuations, and financial as well as good-citizen-based intentions for communicating their demand with their ESP.  One of the factors that was unclear in this analysis was the contribution of the electricity cost as a part of the site's annual budget or operation costs, which we plan to explore as part of our future work.
+Overall, we believe that several factors drive the motivation for demand management. The key ones are the control that a site has when it comes to power purchase negotiations, their price sensitivity to power fluctuations, and financial as well as good-citizen-based intentions for communicating their demand with their ESP. One of the factors that was unclear in this analysis was the contribution of the electricity cost as a part of the site's annual budget or operation costs, which we plan to explore as part of our future work.
