--- a/Nov2015/results.tex
+++ b/Nov2015/results.tex
@@ -6,11 +6,11 @@ In this section, we discuss the results from our quantitative survey. We extende
 \begin{figure}[ht!]
 \begin{center}
 \frame{\includegraphics[scale=0.56]{figs/loadgraphUS.pdf}}
-\caption{Total Load at at SCs in United States}
+\caption{Total Load at SCs in United States}
 \label{fig:USload}
 \vspace{0.9cm}
 \frame{\includegraphics[scale=0.56]{figs/loadgraphEU.pdf}}
-\caption{Total Load at at SCs in Europe}
+\caption{Total Load at SCs in Europe}
 \label{fig:EUload}
 \end{center}
 \end{figure}
@@ -20,11 +20,11 @@ Figures \ref{fig:USload} and \ref{fig:EUload} depict the total load in megawatts
 \begin{figure}[ht!]
 \begin{center}
 \frame{\includegraphics[scale=0.56]{figs/vargraphUS.pdf}}
-\caption{Maximum Variability at at SCs in United States}
+\caption{Maximum Variability at SCs in United States}
 \label{fig:USvar}
 \vspace{0.9cm}
 \frame{\includegraphics[scale=0.56]{figs/vargraphEU.pdf}}
-\caption{Maximum Variability at at SCs in Europe}
+\caption{Maximum Variability at SCs in Europe}
 \label{fig:EUvar}
 \end{center}
 \end{figure}
